<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>14</version>
    </parent>

    <groupId>org.jboss.windup</groupId>
    <artifactId>windup-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Windup Parent</name>
    <description>Migration Tools</description>

    <properties>
        <version.furnace>2.10.0.Final</version.furnace>
        <version.titangraph>0.5.0</version.titangraph>
        <version.tinkerpop.blueprints>2.5.0</version.tinkerpop.blueprints>
        <version.freemarker>2.3.20</version.freemarker>

        <windup.scm.connection>scm:git:https://github.com/windup/windup.git</windup.scm.connection>
        <windup.developer.connection>scm:git:git@github.com:windup/windup.git</windup.developer.connection>
        <windup.scm.url>http://github.com/windup/windup</windup.scm.url>

        <!-- This keeps javadoc from failing on projects with no actual .java source files -->
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>

        <skipDeleteDeps>true</skipDeleteDeps> <!-- Don't delete deps from local repo by default. -->
    </properties>

    <scm>
        <tag>master</tag>
        <connection>${windup.scm.connection}</connection>
        <developerConnection>${windup.developer.connection}</developerConnection>
        <url>${windup.scm.url}</url>
    </scm>

    <modules>
        <module>graph</module>

        <module>config</module>
        <module>config-xml</module>
        <module>config-groovy</module>

        <module>decompiler</module>

        <module>rules-java</module>
        <module>rules-java-ee</module>
        <module>rules-xml</module>

        <module>exec</module>
        <module>reporting</module>
        <module>ui</module>

        <module>utils</module>
        <module>tests</module>

    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>${testExcludeString}</exclude>
                    </excludes>
                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=128m</argLine>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.1</version>
                    <configuration>
                        <compilerVersion>1.7</compilerVersion>
                        <source>1.7</source>
                        <target>1.7</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <profiles>
        <profile>
            <id>cleanup</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>deleteLocalRepoProjectArtifacts</id>
                                <goals>
                                    <goal>remove-project-artifact</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>deleteLocalRepoProjectDeps</id>
                                <goals>
                                    <goal>purge-local-repository</goal>
                                </goals>
                                <configuration>
                                    <skip>${skipDeleteDeps}</skip>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>javadocDist</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.9.1</version>
                        <executions>
                            <execution>
                                <id>javadocs-dist</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                                <configuration>
                                    <debug>true</debug>
                                    <verbose>true</verbose>
                                    <maxmemory>2400m</maxmemory>
                                    <encoding>ISO-8859-1</encoding>
                                    <windowtitle>${javadoc.branding} API</windowtitle>
                                    <doctitle>${javadoc.branding} API</doctitle>
                                    <header>${javadoc.branding}</header>
                                    <footer>${javadoc.branding}</footer>
                                    <includeDependencySources>true</includeDependencySources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <javadoc.branding>Windup ${project.version}</javadoc.branding>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <dependencyManagement>
        <dependencies>

            <!-- Forge BOM -->
            <dependency>
                <groupId>org.jboss.forge</groupId>
                <artifactId>forge-bom</artifactId>
                <version>${version.furnace}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>


        </dependencies>
    </dependencyManagement>

</project>
